k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-security
  labels:
    name: network-security
    environment: production
    app: mlops
